Fix gradle tests